--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "18.0.0",
     "react-toastify": "^8.2.0",
     "swr": "^1.3.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "web3modal": "^1.9.11"
   },
   "devDependencies": {
     "@truffle/hdwallet-provider": "^2.0.7",
