--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "genContractType": "abi-types-generator './public/contracts/NftMarket.json' --output='./types' --name=nftMarketContract --provider=ethers_v5"
+    "genContractType": "abi-types-generator './public/contracts/NftMarket.json' --output='./types' --name=nftMarketContract --provider=ethers_v5",
+    "genProfileContractType": "abi-types-generator './userDB/abi/contracts/UserDb.json' --output='./types' --name=profileContract --provider=ethers_v5"
   },
   "dependencies": {
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
     "@metamask/providers": "^8.1.1",
     "@openzeppelin/contracts": "^4.5.0",
+    "@reduxjs/toolkit": "^1.9.1",
     "@tailwindcss/forms": "^0.5.0",
     "axios": "^0.26.1",
     "dotenv": "^16.0.3",
@@ -22,6 +24,7 @@
     "form-data": "^4.0.0",
     "next": "12.1.4",
     "next-iron-session": "^4.2.0",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-toastify": "^8.2.0",
