--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+#local env files
+.env* local
+.env.development
+.env.production
+keys.json
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
+.idea
+
 
 # testing
 /coverage
@@ -27,13 +33,10 @@ yarn-error.log*
 
 # local env files
 .env*.local
-.env.development
-.env.production
-
-keys.json
 
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
+next-env.d.ts
